INCLUDES=-I../zsdl_wm -I../zsdl_bitfont
bin_PROGRAMS=DC_LightCatcher
DC_LightCatcher_SOURCES=	Load3DS.cpp Load3DS.h \
							ZLA_Interval.cpp ZLA_Interval.h \
							ZLA_Matrix4x4.cpp ZLA_Matrix4x4.h \
							ZLA_Object.cpp ZLA_Object.h \
							ZLA_Plane.cpp ZLA_Plane.h \
							ZLA_Ray.cpp ZLA_Ray.h \
							ZLA_Sphere.cpp ZLA_Sphere.h \
							ZLA_Triangle.cpp ZLA_Triangle.h \
							ZLA_Vector4.cpp ZLA_Vector4.h \
							ZLC_Camera.cpp ZLC_Camera.h \
							ZLC_Color.cpp ZLC_Color.h \
							ZLC_DataSet.cpp ZLC_DataSet.h \
							ZLC_Light.cpp ZLC_Light.h \
							ZLC_Main.cpp \
							ZLC_Material.cpp ZLC_Material.h \
							ZLC_RayTraceKernel.cpp ZLC_RayTraceKernel.h \
							ZLC_Sampler.cpp ZLC_Sampler.h \
							ZLC_Scene.cpp ZLC_Scene.h \
							ZLC_Shader.cpp ZLC_Shader.h \
							ZLC_ViewPort.cpp ZLC_ViewPort.h \
							ZLC_ZMLParser.cpp ZLC_ZMLParser.h \
							ZLA_Module.h ZLA_Types.h
DC_LightCatcher_LDADD=@ZWM_LIBS@
