INCLUDES=-I../zsdl_bitfont -I../ztar_module -I../DCLib
noinst_LIBRARIES=libZSDL_WM.a
libZSDL_WM_a_SOURCES=	ZDLL_PEObj.cpp ZDLL_PEObj.h \
						ZSDL_WM.cpp ZSDL_WM.h \
						ZWM_Button.cpp ZWM_Button.h \
						ZWM_ButtonCollection.cpp ZWM_ButtonCollection.h \
						ZWM_ComboBox.cpp ZWM_ComboBox.h \
						ZWM_CommonDlg.cpp ZWM_CommonDlg.h \
						ZWM_Debug.cpp ZWM_Debug.h \
						ZWM_FInfo.cpp ZWM_FInfo.h \
						ZWM_Graph.cpp ZWM_Graph.h \
						ZWM_ListBox.cpp ZWM_ListBox.h \
						ZWM_MPGWidget.cpp ZWM_MPGWidget.h \
						ZWM_Module.cpp ZWM_Module.h \
						ZWM_MusicCtrl.cpp ZWM_MusicCtrl.h \
						ZWM_Object.cpp ZWM_Object.h \
						ZWM_PictureBox.cpp ZWM_PictureBox.h \
						ZWM_Taskbar.cpp ZWM_Taskbar.h \
						ZWM_TextBox.cpp ZWM_TextBox.h \
						ZWM_Types.cpp ZWM_Types.h \
						ZWM_VScrollBar.cpp ZWM_VScrollBar.h \
						ZWM_WidgetContainer.cpp ZWM_WidgetContainer.h \
						ZWM_Window.cpp ZWM_Window.h
